tests/typechecker/should_fail/module_overlap_datatype.csp
module G
exports

module X
exports
endmodule

J = X.0

endmodule

datatype Y = X.Int
